# bookmark

./: .gitignore  .prettierrc  Readme.md  deno.json  style.md  todo.md  update.sh
.zed/: settings.json
assets/: allIcons.txt  charList.txt  iconMap.json  photoswipe-lightbox.esm.min.js  photoswipe.css  photoswipe.esm.min.js  robots.txt
client/: client.html
client/newstyle/: content.css  embeds.css  globals.css  hljs.css  mobile.css  print.css  sidebars.css  theme.css
client/oldstyles/: content.css  hljs.css  layout.css  mobile.css  overlay.css  theme.css
client/src/: constants-client.ts  constants.ts  explorer.ts  image.ts  init-client.ts  keyboard-nav.ts  mobile.ts  palette.ts  toc.ts  utilities.ts
client/styles/: codeblocks.css  components.css  content.css  embeds.css  globals.css  hljs.css  layout.css  mobile.css  overlay.css  print.css  sidebars.css  theme.css
content/: .404.md  4e.md  All.md  Build.md  Content.md  Customization.md  Embeds.md  GFM Test.md  Markdown Features.md  Misc Features.md  Readme.md  Resources.md  Server Setup.md  miscdocs.md
content/.obsidian/: workspace.json
content/.obsidian/themes/Obsidianite/: theme.css
content/Documentation/: Markdown Features.md  Misc Features.md  Server Setup.md
content/Files/: Cargo.toml  GFM Test.md  Sample Embed.md
server/: build-explorer.ts  build.ts  config.ts  constants.ts  coreutils.ts  embed-processor.ts  embed-utils.ts  init.ts  lib.ts  markdown.ts  subset-font.ts  types.ts  vaultmap.ts
