[package]
name = "hello_world"
version = "0.1.0"
edition = "2025"
authors = ["Your Name <you@example.com>"]
description = "A simple hello world project in Rust"
license = "MIT"
repository = "https://github.com/yourname/hello_world"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }